# render_server

client/: CMakeLists.txt  main.cpp
client/include/: clienttcp2.hpp  clienttcp3.hpp
server/: CMakeLists.txt  main.cpp
server/include/: array2d.hpp  matrix_initialised.hpp  matrix_mult.hpp  servertcp.hpp
